--- a/terminos.html
+++ b/terminos.html
@@ -59,7 +59,7 @@
 <h3>1. Condiciones generales del servicio SISTEMA DE GESTIÓN PARA TU NEGOCIO</h3>
 <br>
 <br> 
-<p>1.1. Estas Condiciones Generales regulan la prestación del Servicio  
+<p class="terminos">1.1. Estas Condiciones Generales regulan la prestación del Servicio  
     sistema de gestión para tu negocio  la pulsación del botón “ENVIAR” por 
     parte del CLIENTE atribuye a éste la condición de usuario del SERVICIO e 
     implica la aceptación, íntegra de las presentes Condiciones Generales. 
@@ -73,7 +73,7 @@
     conocimiento por parte de soporte de la 
     empresa “https://gastonloco.github.io/ contacto/soporte”</p>
 <br>
-<p>1.2. EL CLIENTE no deberá usar o alterar EL SERVICIO con ninguna finalidad, 
+<p class="terminos"></p>1.2. EL CLIENTE no deberá usar o alterar EL SERVICIO con ninguna finalidad, 
     ni podrá utilizarlo para cualquier otro propósito que el señalado en la 
     cláusula 3.1 del presente.</p>
 <br>
