--- a/terminos.html
+++ b/terminos.html
@@ -44,6 +44,7 @@
 <h2>Términos y condiciones</h2>
 <br>
 <br>
+
 <div> 
 <p class="terminos">Por favor, leé cuidadosamente los Términos y Condiciones Generales del 
     sitio https://gastonloco.github.io/ que se detallan a continuación. 
@@ -54,11 +55,13 @@
     condiciones que aparecen a continuación. En caso de no estar de 
     acuerdo con estos términos y condiciones no accedas al Sitio.</p>
     </div>
+
 <br>
 <br>
 <h3>1. Condiciones generales del servicio SISTEMA DE GESTIÓN PARA TU NEGOCIO</h3>
 <br>
 <br> 
+<div>
 <p class="terminos">1.1. Estas Condiciones Generales regulan la prestación del Servicio  
     sistema de gestión para tu negocio  la pulsación del botón “ENVIAR” por 
     parte del CLIENTE atribuye a éste la condición de usuario del SERVICIO e 
@@ -73,15 +76,18 @@
     conocimiento por parte de soporte de la 
     empresa “https://gastonloco.github.io/ contacto/soporte”</p>
 <br>
-<p class="terminos"></p>1.2. EL CLIENTE no deberá usar o alterar EL SERVICIO con ninguna finalidad, 
+</div>
+<div>
+<p class="terminos">1.2. EL CLIENTE no deberá usar o alterar EL SERVICIO con ninguna finalidad, 
     ni podrá utilizarlo para cualquier otro propósito que el señalado en la 
-    cláusula 3.1 del presente.</p>
+    cláusula 3.1 del presente.</p> 
 <br>
+</div>
 <br>
 <h3>2. Objeto</h3>
 <br>
 <br>
-<p>Las presentes Condiciones Generales tienen por objeto regular la comercialización 
+<p class="terminos">Las presentes Condiciones Generales tienen por objeto regular la comercialización 
     del SERVICIO y la utilización del mismo por el CLIENTE sujeto a las condiciones 
     que establece el sistema de gestión para tu negocio, así como la contraprestación 
     a pagar por el CLIENTE mediante  la forma mencionada y fijada con cada cliente 
