--- a/terminos.html
+++ b/terminos.html
@@ -54,8 +54,7 @@
     páginas, te comprometes a cumplir y aceptar TODOS los términos y 
     condiciones que aparecen a continuación. En caso de no estar de 
     acuerdo con estos términos y condiciones no accedas al Sitio.</p>
-    </div>
-
+</div>
 <br>
 <br>
 <h3>1. Condiciones generales del servicio SISTEMA DE GESTIÓN PARA TU NEGOCIO</h3>
@@ -83,9 +82,8 @@
     cláusula 3.1 del presente.</p> 
 <br>
 </div>
-<br>
 <h3>2. Objeto</h3>
-<br>
+<div>
 <br>
 <p class="terminos">Las presentes Condiciones Generales tienen por objeto regular la comercialización 
     del SERVICIO y la utilización del mismo por el CLIENTE sujeto a las condiciones 
@@ -97,11 +95,11 @@
     funcionalidades del servicio. Con dicho sistema, el CLIENTE podrá almacenar 
     fácilmente gran cantidad de datos en la nube con agilidad y simpleza.</p>
 <br>
-<br>
+</div>
 <h3>3. Descripción del servicio y cobertura</h3>
+<div>
 <br>
-<br>
-<p>3.1. Descripción del servicio. Es una herramienta destinadas a PYMEs,  Microempresas 
+<p class="terminos">3.1. Descripción del servicio. Es una herramienta destinadas a PYMEs,  Microempresas 
 y Empresas en general. El SERVICIO dispone de un entorno simple, que permite 
 gestionar tus ventas, administrar tus compras y controlar tu stock.  Lo cual 
 incluye  el acceso a la gestión de cuentas a pagar (proveedores), cuentas a 
@@ -112,6 +110,7 @@ aplicación 100% Online y por tanto no requiere de la instalación de ningún
 software en la PC, posibilitándose de esta forma el acceso desde cualquier 
 sitio utilizando un simple navegador y una conexión a Internet.</p>
 <br>
+</div>
 <p>3.2. Titularidad del SERVICIO. El SERVICIO resulta de exclusiva titularidad de 
 SISTEMA DE GESTIÓN PARA TU NEGOCIO quien es el encargado y responsable frente 
 al CLIENTE de prestar el SERVICIO satisfactoriamente y de su correcto funcionamiento. 
