--- a/login.html
+++ b/login.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Factura-Online</title>
-    <meta name="author" content="Grupo Aula 3">
-    <meta name="description" content="sistema de facturacion vinculada a tu sitio web">
-    <meta name="keywords" content="facturas,deposito,control,remito,almacen,presupuesto">
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <script src="https://kit.fontawesome.com/438f346520.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="shorcut icon" href="img/logo.jpg">
+    <head>
+        <meta charset='utf-8'>
+        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+        <title>Factura-Online</title>
+        <meta name="author" content="Grupo Aula 3">
+        <meta name="description" content="sistema de facturacion vinculada a tu sitio web">
+        <meta name="keywords" content="facturas,deposito,control,remito,almacen,presupuesto">
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
+        <script src="https://kit.fontawesome.com/438f346520.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="./css/styles.css">
+        <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;600;700&display=swap" rel="stylesheet"> 
+        <link rel="shorcut icon" href="./img/logo.jpg">
+    </head>
 <body>
     <header class="encabezado">
         <nav class="menu">
@@ -49,7 +50,8 @@
                 </div>
             
                 <input type="submit" value="login" class="button">    
-                <p>si no está registrado haga clic en el botón <a class="link" href="registro.html"> <span>Registrarse</span></a></p>
+                <p>si no está registrado haga clic en el botón <a class="link" href="registro.html">
+                <span>Registrarse</span></a></p>
             </div>
 
     </form>
