--- a/contacto.html
+++ b/contacto.html
@@ -10,10 +10,30 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src="https://kit.fontawesome.com/438f346520.js" crossorigin="anonymous"></script>
     <script src='main.js'></script>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+    <!-- Load Validation JS -->
+    <script src="/path/to/bs4-form-validation.min.js"></script>
+
+
+
+
+
+<!--     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>-->
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+
+<!--  <link rel="stylesheet" href="./css/styles.css">-->
+
+    <link rel="stylesheet" href="./css/Contacto.css">
+
     <link rel="shorcut icon" href="img/logo.jpg">
+
+
+
 </head>
 <body>
     <header class="encabezado">
@@ -38,10 +58,73 @@
     </header>
 
 
-<main class="Mario">
+
+
+
+
+<!---------------------------------------------------------------------------------------------->
+<!--- Formulario                      ---------------------------------------------------------->
+<!---------------------------------------------------------------------------------------------->
+ <form action="" class="formulario_c">
+     <h1 class="formulario_c_t">Contactenos</h1>
+     <input type="text" class="formulario_c">
+     <label for="" class="formulario_c">Nombre</label>
+
+     <input type="text" class="formulario_c">
+     <label for="" class="formulario_c">Correo electronico</label>
+
+     <input type="text" class="formulario_c">
+     <label for="" class="formulario_c">Telefono</label>
+
+     <input type="text" class="formulario_c">
+     <label for="" class="formulario_c">Mensaje</label>
+
+     <input type="submit" class="formulario_s">
+    
+      </form>
+<!---------------------------------------------------------------------------------------------->
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!------
+
+<main class="Mario">        ----->
         <!-- <div  style="float: left; width:49.85%; height: 610px;" class="formulario3"> -->
             <div class="formulario3"></div>
           <!-- <article style="height: 100%; width: 95%;"> -->
+        
+ 
+ <!------
+ 
             <article>
             <br>
             <h2 style="text-align: center; color:rgb(243, 205, 36); ">Formulario de contacto</h2>
@@ -83,7 +166,7 @@
                     <a  href="index.html"></a>
         </form>  
 </main>
-
+------->
     <footer>  
     <div class="contenedor-all">
         <div class="contenedor-footer">
