--- a/registro.html
+++ b/registro.html
@@ -68,7 +68,7 @@
 
                 <div class="contenedor1">
                     <i class="fas fa-globe-africa icono"></i>
-                    <input type="text" placeholder="Pais" class="cuadrado" id="pais2" required>    
+                    <input type="text" placeholder="Localidad" class="cuadrado" id="local2" required>    
                 </div>
                
                 <div class="contenedor1">
