--- a/contacto1.html
+++ b/contacto1.html
@@ -8,11 +8,8 @@
     <title></title>
 </head>
 <body>
-
-
-
 <!---------------------------------------------------------------------------------------------->
-<!--- Formulario                      ---------------------------------------------------------->
+<!---                    Formulario   ---------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------->
 <form action="" class="formulario">
     <h1 class="formulario__titulo">Contactenos</h1>
@@ -37,6 +34,6 @@
 
 
 
-    
+    <script src="/js/Contacto.js"></script>
 </body>
 </html>
