--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,7 @@
     <script src='main.js'></script>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <!--<link rel="stylesheet" href="./css/styles.css">-->
     <link rel="shorcut icon" href="img/logo.jpg">
     <link rel="stylesheet" href="/css/Contacto.css">
 
@@ -136,28 +136,7 @@
         </div>
     </div>
 </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <script src="/js/Contacto.js"></script>
 </body>
 </html>
+<!--   https://pprof1-2021.github.io/g5-a3g5/index.html  -->
