--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,7 @@
     <script src='main.js'></script>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <!--<link rel="stylesheet" href="./css/styles.css">-->
     <link rel="shorcut icon" href="img/logo.jpg">
     <link rel="stylesheet" href="./css/Contacto.css">
 
