--- a/contacto.html
+++ b/contacto.html
@@ -136,7 +136,7 @@
         </div>
     </div>
 </footer>
-    <script src="/js/Contacto.js"></script>
+    <script src="./js/Contacto.js"></script>
 </body>
 </html>
 <!--   https://pprof1-2021.github.io/g5-a3g5/index.html  -->
