--- a/resultado.html
+++ b/resultado.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="shorcut icon" href="img/logo.jpg">
 </head>
-<body class="bg-light container">
+<body class="bg-light container" onsubmit=return time()>
     <header class="encabezado">
         <nav class="menu">
                 <div>
@@ -39,14 +39,14 @@
                 <h3 class="card-title"> Datos del Usuario</h3>
             </div>
             <div class="card-body">
-                <form class="row">
+                <form class="row" name="datos1">
                     <div class="form-group col-md-4">
                         <label for="">Nombre</label>
                         <input id="inputNombre" type="text" class="form-control">
                     </div>
                     <div class="form-group col-md-4">
                         <label for="">Apellido</label
-                            ><input id="inputRuc" type="text" class="form-control">
+                            ><input id="inputApellido" type="text" class="form-control">
                         </div>
                     <div class="form-group col-md-2">
                         <label for="">edad</label>
@@ -84,5 +84,6 @@
     <script src="./js/jquery.js"></script>  
     <script src="./js/bootstrap.min.js"></script>
     <script src="js/funcionesGrupo99.js"></script>
+    <script src="js/time.js"></script>
 </body>
 </html>
