--- a/ht1.html
+++ b/ht1.html
@@ -51,7 +51,7 @@
             "°"+//bandera de fin de input
             document.getElementById('4').value +
             "°";//bandera de fin de input
-                window.open(url+'?filtro1='+document.getElementById('5').value, ubicacion, 'width=300,height=500');return false;}
+                window.open(url+'?payload='+document.getElementById('5').value, ubicacion, 'width=300,height=500');return false;}
         </script>
 <!------------------------------------------------------------------------------------------------------------------------------------->
     </body>
