--- a/contacto2.html
+++ b/contacto2.html
@@ -18,16 +18,12 @@
 </head>
 
 
-
-<body>
+<Body onLoad="setTimeout('cerrar()',60*200)">
 <!---------------------------------------------------------------------------------------------->
 <!---                    Formulario   ---------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------->
 <form name="form2" class="forma" action="ht2.html" method="get">
     <h1 class="forma__titulo">Enviando consulta de contacto</h1>
-
-
-
 
     <form  method="get" >
         <input type="text" id="1" class="forma__inputR" size="60" />
@@ -37,7 +33,6 @@
         <input type="hidden" id="5" name="Paquete_completo_RX">
         <h1 class="forma__titulo">Su consulta sera respondida a la brevedad</h1>
         </form>
-
 <!---------------------------------------------------------------------------------------------->
 
 
@@ -116,6 +111,8 @@
       }
      }
 //---------------------------------------------------------------------------------------------------------------------------------------  
+    function cerrar() {window.close()}
+//--------------------------------------------------------------------------------------------------------------------------------------- 
 </script>
 
 
