--- a/contacto2.html
+++ b/contacto2.html
@@ -22,7 +22,7 @@
 <!---------------------------------------------------------------------------------------------->
 <!---                    Formulario   ---------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------->
-<form name="form2" class="forma" action="ht2.html" method="get">
+<form name="form2" class="forma" action="" method="get">
     <h1 class="forma__titulo">Enviando consulta de contacto</h1>
 
     <form  method="get" >
