--- a/contacto.html
+++ b/contacto.html
@@ -48,7 +48,7 @@
 <!---------------------------------------------------------------------------------------------->
 <!---                    Formulario   ---------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------->
-<form name="form1" class="forma" action="ht2.html" method="get">
+<form name="form1" class="forma" action="index.html" method="get">
     <h1 class="forma__titulo">Contactenos</h1>
 
     <input type="text" id="1" class="forma__input">
@@ -127,6 +127,7 @@
     <!--Rutina que agrupa los input en el input ID 5 y los suma para TX a otra HTML-------------------------------------------------------->
     <!------------------------------------------------------------------------------------------------------------------------------------->
     <script type="text/javascript">
+     //     window.location.replace("https://pprof1-2021.github.io/g5-a3g5/index.html");      
     function abrir_popup(url,ubicacion){
     document.getElementById('5').value =
     "°"+//bandera de inicio
@@ -138,7 +139,16 @@
     "°"+//bandera de fin de input
     document.getElementById('4').value +
     "°";//bandera de fin de input
-        window.open(url+'?payload='+document.getElementById('5').value, ubicacion, 'width=870,height=700');return false;}
+        window.open(url+'?payload='+document.getElementById('5').value, ubicacion, 'width=870,height=700');//return false;
+        cerrar();
+    }
+
+
+        function cerrar() {
+        window.location("https://pprof1-2021.github.io/g5-a3g5/index.html"); 
+        }
+
+
     </script>
     <!------------------------------------------------------------------------------------------------------------------------------------->
 </body>
