--- a/contacto.html
+++ b/contacto.html
@@ -123,32 +123,8 @@
     </div>
 </footer>
     <script src="./js/Contacto.js"></script>
-    <!------------------------------------------------------------------------------------------------------------------------------------->
-    <!--Rutina que agrupa los input en el input ID 5 y los suma para TX a otra HTML-------------------------------------------------------->
-    <!------------------------------------------------------------------------------------------------------------------------------------->
-    <script type="text/javascript">
-     //     window.location.replace("https://pprof1-2021.github.io/g5-a3g5/index.html");      
-    function abrir_popup(url,ubicacion){
-    document.getElementById('5').value =
-    "°"+//bandera de inicio
-    document.getElementById('1').value +
-    "°"+//bandera de fin de input
-    document.getElementById('2').value +
-    "°"+//bandera de fin de input
-    document.getElementById('3').value +
-    "°"+//bandera de fin de input
-    document.getElementById('4').value +
-    "°";//bandera de fin de input
-        window.open(url+'?payload='+document.getElementById('5').value, ubicacion, 'width=870,height=700');//return false;
-        cerrar();
-    }
-        function cerrar() {
-        window.location("https://pprof1-2021.github.io/g5-a3g5/index.html"); 
-        }
+    <script src="js/funcionesGrupo99.js"></script>
 
-
-    </script>
-    <!------------------------------------------------------------------------------------------------------------------------------------->
 </body>
 </html>
 <!--   https://pprof1-2021.github.io/g5-a3g5/index.html  -->
