--- a/resultado.html
+++ b/resultado.html
@@ -14,6 +14,7 @@
     <script src='main.js'></script>
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles2.css">
+    <link rel="stylesheet" href="./css/Contacto.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="shorcut icon" href="img/logo.jpg">
 </head>
