--- a/registro.html
+++ b/registro.html
@@ -57,16 +57,16 @@
         
             <form name="form1" class="forma was-validated row" action="index.html" method="get" novalidate>
 
-          <div class="form-group col-md-3">
+          <div class="form-group col-md-2">
             <label for="uname">Nombre:</label>
-            <input type="text" class="form-control" id="1" placeholder="ingresar Nombre" name="name" required>
+            <input type="text" class="form-control" id="1" placeholder="ingresar Nombre" name="name1" required>
             <div class="valid-feedback">Valid.</div>
             <div class="invalid-feedback">Por favor rellene este campo.</div>
           </div>
 
-          <div class="form-group col-md-3">
+          <div class="form-group col-md-2">
             <label for="uname">Apellido</label>
-            <input type="text" class="form-control" id="2" placeholder="Ingresar Apellido" name="apell" required>
+            <input type="text" class="form-control" id="2" placeholder="Ingresar Apellido" name="apell1" required>
             <div class="valid-feedback">Valid.</div>
             <div class="invalid-feedback">Por favor rellene este campo.</div>
           </div>
@@ -76,6 +76,17 @@
             <input type="email" class="form-control" placeholder="Email" id="3" name="email">
             <div class="valid-feedback">Valid.</div>
             <div class="invalid-feedback">Por favor rellene este campo.</div>
+          </div>
+
+          <div class="form-group col-md-2">
+            <label for="uname">Apellido</label>
+            <input type="date" class="form-control" id="8" name="date" required onclick="edad()">
+            <div class="valid-feedback">Valid.</div>
+            <div class="invalid-feedback">Por favor rellene este campo.</div>
+          </div>
+
+          <div class="form-group col-md-1">
+            <input type="hidden" class="form-control"  id="6" name="edad">
           </div>
 
           <div class="form-group col-md-3">
@@ -113,7 +124,7 @@
           </div>
 
           <div class="form-group col-md-3">
-            <input type="hidden" id="6" name="Paquete_completo_TX2">
+            <input type="hidden" id="7" name="Paquete_completo_TX2">
           </div>
           <div class="form-group col-md-3">
             <input type="submit" class="form-control" onClick="abrir_popup2('resultado.html', '_blank'); return false;" value="Enviar">
