--- a/resultado.html
+++ b/resultado.html
@@ -68,15 +68,15 @@
                         <input id="4" type="text" class="form-control forma__inputR">
                     </div>
                     <div class="form-group col-md-4">
-                        <label for="">Fecha</label>
-                        <input id="inputFecha" type="date" class="form-control forma__inputR">
+                        <label for="">Edad</label>
+                        <input id="6" type="text" class="form-control forma__inputR">
                     </div>
                     <div class="form-group col-md-8">
                         <label for="">Email</label>
                         <input id="3" type="text" class="form-control forma__inputR">
                     </div>
                     <div class="form-group col-md-8">
-                        <input type="hidden" id="6" name="Paquete_completo_RX2">
+                        <input type="hidden" id="7" name="Paquete_completo_RX2">
                     </div>
    
                 </form>
