--- a/contacto2.html
+++ b/contacto2.html
@@ -20,7 +20,7 @@
 
 <Body onLoad="setTimeout('cerrar()',60*200)">
 <!---------------------------------------------------------------------------------------------->
-<!---                    Formulario   ---------------------------------------------------------->
+<!---                    Formulario 2 ---------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------->
 <form name="form2" class="forma" action="" method="get">
     <h1 class="forma__titulo">Enviando consulta de contacto</h1>
