--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'><!-- IE Comptaible mode -->
     <title>Factura-Online</title>
     <meta name="author" content="Grupo Aula 3">
     <meta name="description" content="sistema de facturacion vinculada a tu sitio web">
@@ -32,10 +32,10 @@
                 </div>
             
                 <ul>
-                    <li><a  href="index.html">Inicio</a></li>
+                    <li><a  href="index.html">Inicio</a></li><!---->
                     <li><a  href="http://hfdistribuidora.com/" target="blank">Tienda</a></li>
-                    <li><a  href="contacto.html">Contacto</a></li> 
-                    <li><a  href="login.html">Login</a>
+                    <li><a  href="contacto.html">Contacto</a></li><!--redirecciona pagina contacto-->
+                    <li><a  href="login.html">Login</a></li><!--redirecciona pagina login-->
                     <ul>
                         <li><a  href="registro.html">Registrar</a>
                     </ul>
@@ -48,7 +48,7 @@
 <!---------------------------------------------------------------------------------------------->
 <!---                    Formulario   ---------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------->
-<form name="form1" class="forma" action="index.html" method="get">
+<form name="form1" class="forma" action="index.html" method="get"><!--redirecciona pagina index-->
     <h1 class="forma__titulo">Contactenos</h1>
 
     <input type="text" id="1" class="forma__input">
@@ -63,7 +63,7 @@
     <input type="hidden" id="5" name="Paquete_completo_TX">
 
     <input type="submit" class="forma__submit" onClick="abrir_popup('contacto2.html', '_blank'); return false;" value="Enviar">
-    </form>
+    </form><!-- fin formulario-->
 <!---------------------------------------------------------------------------------------------->
 
 
@@ -122,8 +122,8 @@
         </div>
     </div>
 </footer>
-    <script src="./js/Contacto.js"></script>
-    <script src="js/funcionesGrupo99.js"></script>
+    <script src="./js/Contacto.js"></script><!-- llama a la pagina js-->
+    <script src="js/funcionesGrupo99.js"></script><!-- llama a la pagina js-->
 
 </body>
 </html>
