--- a/contacto.html
+++ b/contacto.html
@@ -48,21 +48,27 @@
 <!---------------------------------------------------------------------------------------------->
 <!---                    Formulario   ---------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------->
-<form name="form1" class="forma" action="index.html" method="get"><!--redirecciona pagina index-->
-    <h1 class="forma__titulo">Contactenos</h1>
+<form name="form1" class="forma" 
+onsubmit="abrir_popup('contacto2.html', '_blank')" action="index.html" method="get" >
+    <!--redirecciona pagina index-->
+ 
+    <h1 class="forma__titulo">Contactenos</h1><!--titulo-->
 
-    <input type="text" id="1" class="forma__input">
-    <label for="" class="forma__label">Nombre</label>
-    <input type="text" id="2" class="forma__input">
-    <label for="" class="forma__label">Correo electronico</label>
-    <input type="text" id="3"   class="forma__input">
-    <label for="" class="forma__label">Telefono</label>
-    <input type="text" id="4"  class="forma__input">
-    <label for="" class="forma__label">Mensaje</label>
+    <input type="text" id="1" class="forma__input" name="nombre" required><!--input nombre-->
+    <label for="" class="forma__label">Nombre</label><!--label nombre-->
+
+    <input type="email"  id="2" class="forma__input" required><!--input email-->
+    <label for="" class="forma__label">Correo electronico</label><!--label email-->
+
+    <input type="number" id="3"   class="forma__input" required><!--input telefono-->
+    <label for="" class="forma__label">Telefono</label><!--label telefono-->
+
+    <input type="text" id="4"  class="forma__input" required><!--input asunto-->
+    <label for="" class="forma__label">Mensaje</label><!--label asunto-->
    
-    <input type="hidden" id="5" name="Paquete_completo_TX">
+    <input type="hidden" id="5" name="Paquete_completo_TX"><!--input paquete completo-->
 
-    <input type="submit" class="forma__submit" onClick="abrir_popup('contacto2.html', '_blank'); return false;" value="Enviar ">
+    <input type="submit" class="forma__submit"  value="Enviar "><!--boton enviar-->
     </form><!-- fin formulario-->
 <!---------------------------------------------------------------------------------------------->
 
@@ -108,10 +114,7 @@
                     <p>info@sistemas.com.ar</p>
                 </div>    
             </div>
-
-
-
-               
+          
             <div class="conteiner-footer2">
                 <div class="copyright">
                     <p>© 2021 Todo los Derechos Reservados</p>
@@ -122,7 +125,10 @@
         </div>
     </div>
 </footer>
-    <script src="./js/Contacto.js"></script><!-- llama a la pagina js-->
+
+<!--<input type="submit" class="forma__submit"  onClick="abrir_popup('contacto2.html', '_blank'); return false;" value="Enviar ">-->
+
+<script src="./js/Contacto.js"></script><!-- llama a la pagina js-->
     <script src="js/funcionesGrupo99.js"></script><!-- llama a la pagina js-->
 
 </body>
